--- a/inner.html
+++ b/inner.html
@@ -85,7 +85,7 @@
           <div class="breadcrumbs">
             <ul>
               <li>
-                <a href="#" name="icon"><img src="img/icon-exit.png/sprite.png" width="15"height="12" alt="Главная страница"></a> 
+                <a href="#" class="icon"><img src="img/icon-exit.png/icon-home.png" width="15px" height="12px" alt="Главная страница"></a> 
               </li>
               <li>
                 <a href="#">Каталог</a>
@@ -94,7 +94,7 @@
                 <a href="#">Инструмент</a>
               </li>
               <li>
-                <a href="#">Перфораторы</a>
+                <span class="">Перфораторы</span>
               </li>
             <ul>
           </div>
