--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div class="foto-block__buttons">
                 <p>Скидки 50%</p>
                 <a href="#" class="slogan">На 350 товаров</a>
-                <img class="button__icon" src="img/fotopickhe-img.png/Tara.png" height="72" width="59">
+                <img class="button__icon" src="img/fotopickhe-img.png/pannier.png.png" height="72" width="59">
             </div>
             <div class="foto-block__buttons">
                 <p>Доставка</p>
