--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
                 <div class="label">новинка</div>
                 <p>Материалы</p>
                 <a href="#" class="slogan">На любой вкус</a>
-                <img class="button__icon" src="img/fotopickhe-img.png/bucket.png" width="44" height="65">
+                <img class="button__icon" src="img/fotopickhe-img/bucket.png" width="44" height="65">
               </div>
               <div class="foto-block__buttons">
                 <p>Инструмент</p>
                 <a href="#" class="slogan">На все случаи</a>
-                <img class="button__icon" src="img/fotopickhe-img.png/drill.png" width="75" height="61">
+                <img class="button__icon" src="img/fotopickhe-img/drill.png" width="75" height="61">
               </div>
               <div class="foto-block__slider">
                 <div class="slider__paginator">
@@ -120,17 +120,17 @@
             <div class="foto-block__buttons">
                 <p>Техника</p>
                 <a href="#" class="slogan">Для стройки</a>
-                <img class="button__icon" src="img/fotopickhe-img.png/tractor.png" width="78" height="62">
+                <img class="button__icon" src="img/fotopickhe-img/tractor.png" width="78" height="62">
             </div>    
             <div class="foto-block__buttons">
                 <p>Скидки 50%</p>
                 <a href="#" class="slogan">На 350 товаров</a>
-                <img class="button__icon" src="img/fotopickhe-img.png/pannier.png.png" height="72" width="59">
+                <img class="button__icon" src="img/fotopickhe-img/pannier.png.png" height="72" width="59">
             </div>
             <div class="foto-block__buttons">
                 <p>Доставка</p>
                 <a href="#" class="slogan">бесплатно</a>
-                <img class="button__icon" src="img/fotopickhe-img.png/car.png" height="63" width="78">
+                <img class="button__icon" src="img/fotopickhe-img/car.png" height="63" width="78">
             </div>
           </div>
         </div>
@@ -140,26 +140,26 @@
     		</div>
     		<div class="main-catalog__items">
     			<article class="catalog__item">
-    				<div class="image"><img src="img/catalog-img1.jpg/prod-image1.jpg" height="168" width="218"></div>
+    				<div class="image"><img src="img/catalog-img1/prod-image1.jpg" height="168" width="218"></div>
             <a class="name-company" href="#">Перфоратор BOSCH<br>BFG 9000</a>
             <div class="item__old-price">32500 P.</div>
             <div class="item__price">25500 P.</div>
     			</article>
     			<article class="catalog__item">
-    				<div class="image"><img src="img/catalog-img1.jpg/prod-image2.jpg" height="168" width="218"></div>
+    				<div class="image"><img src="img/catalog-img1/prod-image2.jpg" height="168" width="218"></div>
             <a class="name-company" href="#">Перфоратор BOSCH<br>BFG 3000</a>
             <div class="item__old-price">22500 P.</div>
             <div class="item__price">15500 P.</div>
     			</article>
     			<article class="catalog__item">
-    				<div class="image"><img src="img/catalog-img1.jpg/prod-image3.jpg" height="168" width="218"></div>
+    				<div class="image"><img src="img/catalog-img1/prod-image3.jpg" height="168" width="218"></div>
             <a class="name-company" href="#">Перфоратор BOSCH<br>BFG 6000</a>
             <div class="item__old-price">30500 P.</div>
             <div class="item__price">25500 P.</div>
     			</article>
     			<article class="catalog__item">
     				<span class="label">NEW</span>
-            <div class="image"><img src="img/catalog-img1.jpg/prod-image2.jpg" height="168" width="218"></div>
+            <div class="image"><img src="img/catalog-img1/prod-image2.jpg" height="168" width="218"></div>
             <a class="name-company" href="#">Перфоратор BOSCH<br>BFG 2000</a>
             <div class="item__price">12500 P.</div>
     			</article>
@@ -170,28 +170,28 @@
     		</div>
     		<div class="main-manufactures">
     			<div class="main-manufactures__branded-sign">
-    				<a href="#"><img src="img/manufactur-img.jpg/manuf-img1.jpg" height="105" width="180" alt="Bosch" ></a>
+    				<a href="#"><img src="img/manufactur-img/manuf-img1.jpg" height="105" width="180" alt="Bosch" ></a>
     			</div>
     			<div class="main-manufactures__branded-sign">
-    				<a href="#"><img src="img/manufactur-img.jpg/manuf-img2.jpg" height="105" width="180" alt="Makita" ></a>
+    				<a href="#"><img src="img/manufactur-img/manuf-img2.jpg" height="105" width="180" alt="Makita" ></a>
     			</div>
     			<div class="main-manufactures__branded-sign">
-    				<a href="#"><img src="img/manufactur-img.jpg/manuf-img3.jpg" height="105" width="180" alt="DeWalt" ></a>
+    				<a href="#"><img src="img/manufactur-img/manuf-img3.jpg" height="105" width="180" alt="DeWalt" ></a>
     			</div>
     			<div class="main-manufactures__branded-sign">
-    				<a href="#"><img src="img/manufactur-img.jpg/manuf-img4.jpg" height="105" width="180" alt="Интерскол" ></a>
+    				<a href="#"><img src="img/manufactur-img/manuf-img4.jpg" height="105" width="180" alt="Интерскол" ></a>
     			</div>
     			<div class="main-manufactures__branded-sign">
-    				<a href="#"><img src="img/manufactur-img.jpg/manuf-img5.jpg" height="105" width="180" alt="HITACHI" ></a>
+    				<a href="#"><img src="img/manufactur-img/manuf-img5.jpg" height="105" width="180" alt="HITACHI" ></a>
     			</div>
     			<div class="main-manufactures__branded-sign">
-    				<a href="#"><img src="img/manufactur-img.jpg/manuf-img6.jpg" height="105" width="180" alt="LG" ></a>
+    				<a href="#"><img src="img/manufactur-img/manuf-img6.jpg" height="105" width="180" alt="LG" ></a>
     			</div>
     			<div class="main-manufactures__branded-sign">
-    				<a href="#"><img src="img/manufactur-img.jpg/manuf-img7.jpg" height="105" width="180" alt="AEG" ></a>
+    				<a href="#"><img src="img/manufactur-img/manuf-img7.jpg" height="105" width="180" alt="AEG" ></a>
     			</div>
     			<div class="main-manufactures__branded-sign">
-    				<a href="#"><img src="img/manufactur-img.jpg/manuf-img8.jpg" height="105" width="180" alt="METABO" ></a>
+    				<a href="#"><img src="img/manufactur-img/manuf-img8.jpg" height="105" width="180" alt="METABO" ></a>
     			</div>
     		</div>
     	</div>	
@@ -210,21 +210,21 @@
     				  <div class="services__item ">
     					  <h2>ДОСТАВКА</h2>
                 <p>Мы с удовольствием доставим ваш товар прямо<br>к вашему подъезду совершенно бесплатно!<br>Ведь мы неплохо заработаем,<br>поднимая его на ваш на этаж!</p>
-                <img src="img/services-img.png/shedow.png" class="shedow">
-                <img src="img/services-img.png/shipping.png" height="146" width="206" class="figure">
+                <img src="img/services-img/shedow.png" class="shedow">
+                <img src="img/services-img/shipping.png" height="146" width="206" class="figure">
     				  </div>
     				  <div class="services__item">
     					  <h2>ГАРАНТИЯ</h2>
                 <p>Если купленный у нас товар поломается или заискрит,<br>а также в случае пожара, справоцированного его возгаранием,<br>вы всегда можете быть уверены в нашей гарантии. Мы обменяем<br>сгоревший товар на новый.<br>Дом уже востановите как-нибудь сами.</p>
-                <img src="img/services-img.png/shedow.png" class="shedow">
-                <img src="img/services-img.png/100.png" height="146" width="206" class="figure">
+                <img src="img/services-img/shedow.png" class="shedow">
+                <img src="img/services-img/100.png" height="146" width="206" class="figure">
     				  </div>
     				  <div class="services__item">
     					  <h2>КРЕДИТ</h2>
                 <p>Залесть в долговую яму стало проще!<br>Кредитные консультанты придут вам на помощь.</p>
                 <a href="#" class="application">отправить заявку</a>
-                <img src="img/services-img.png/shedow.png" class="shedow">
-                <img src="img/services-img.png/mani.png" height="146" width="206" class="figure">
+                <img src="img/services-img/shedow.png" class="shedow">
+                <img src="img/services-img/mani.png" height="146" width="206" class="figure">
     				  </div>
             </div>
     			</div>
