--- a/inner.html
+++ b/inner.html
@@ -85,7 +85,7 @@
           <div class="breadcrumbs">
             <ul>
               <li>
-                <a href="#" class="icon"><img src="img/icon-exit.png/icon-home.png" width="15px" height="12px" alt="Главная страница"></a> 
+                <a href="#" class="icon"><!--<img src="img/icon-exit.png/icon-home.png" width="15px" height="12px" alt="Главная страница">--></a> 
               </li>
               <li>
                 <a href="#">Каталог</a>
@@ -149,7 +149,7 @@
                 </li>
               </ul>
               <div class="catalog-sorting__guides">
-                <a href="#"><img src="down-dir.png" width="11" height="10"></a>
+                <a href="#"><img src="down-dir.png" width="11" height="10"></a><!--надо разобраться с треугольниками-->
                 <a href="#"><img src="icon-up-dir.png" width="11" height="10"></a>
               </div> 
               </div>
@@ -159,7 +159,7 @@
                   <a class="buy" href="#">КУПИТЬ</a>
                   <a class="bookmark" href="#">В ЗАКЛАДКИ</a>
                 </div>
-                <div class="image"><img src="img/catalog-img1.jpg/prod-image2.jpg" height="168" width="218"></div>
+                <div class="image"><img src="img/catalog-img1/prod-image2.jpg" height="168" width="218"></div>
                 <a href="#">Перфоратор BOSCH<br>BFG 3000</a>
                 <div class="item__old-price">22500 P.</div>
                 <div class="item__price">15500 P.</div>
@@ -169,7 +169,7 @@
                   <a class="buy" href="#">КУПИТЬ</a>
                   <a class="bookmark" href="#">В ЗАКЛАДКИ</a>
                 </div>
-                <div class="image"><img src="img/catalog-img1.jpg/prod-image3.jpg" height="168" width="218"></div>
+                <div class="image"><img src="img/catalog-img1/prod-image3.jpg" height="168" width="218"></div>
                 <a href="#">Перфоратор BOSCH<br>BFG 6000</a>
                 <div class="item__old-price">30500 P.</div>
                 <div class="item__price">25500 P.</div>
@@ -180,7 +180,7 @@
                   <a class="bookmark" href="#">В ЗАКЛАДКИ</a>
                 </div>
                 <div class="flag flag-new">новинка</div>
-                <div class="image"><img src="img/catalog-img1.jpg/prod-image2.jpg" height="168" width="218"></div>
+                <div class="image"><img src="img/catalog-img1/prod-image2.jpg" height="168" width="218"></div>
                 <a href="#">Перфоратор BOSCH<br>BFG 2000</a>
                 <div class="item__price">12500 P.</div>
               </article>
@@ -189,7 +189,7 @@
                   <a class="buy" href="#">КУПИТЬ</a>
                   <a class="bookmark" href="#">В ЗАКЛАДКИ</a>
                 </div>
-                <div class="image"><img src="img/catalog-img1.jpg/prod-image2.jpg" height="168" width="218"></div>
+                <div class="image"><img src="img/catalog-img1/prod-image2.jpg" height="168" width="218"></div>
                 <a href="#">Перфоратор BOSCH<br>BFG 3000</a>
                 <div class="item__old-price">22500 P.</div>
                 <div class="item__price">15500 P.</div>
@@ -200,7 +200,7 @@
                   <a class="bookmark" href="#">В ЗАКЛАДКИ</a>
                 </div>
                 <div class="flag flag-new">новинка</div>
-                <div class="image"><img src="img/catalog-img1.jpg/prod-image3.jpg" height="168" width="218"></div>
+                <div class="image"><img src="img/catalog-img1/prod-image3.jpg" height="168" width="218"></div>
                 <a href="#">Перфоратор BOSCH<br>BFG 6000</a>
                 <div class="item__old-price">30500 P.</div>
                 <div class="item__price">25500 P.</div>
@@ -210,7 +210,7 @@
                   <a class="buy" href="#">КУПИТЬ</a>
                   <a class="bookmark" href="#">В ЗАКЛАДКИ</a>
                 </div>
-                <div class="image"><img src="img/catalog-img1.jpg/prod-image2.jpg" height="168" width="218"></div>
+                <div class="image"><img src="img/catalog-img1/prod-image2.jpg" height="168" width="218"></div>
                 <a href="#">Перфоратор BOSCH<br>BFG 2000</a>
                 <div class="item__price">12500 P.</div>
               </article>
@@ -220,7 +220,7 @@
                   <a class="bookmark" href="#">В ЗАКЛАДКИ</a>
                 </div>
                 <div class="flag flag-new">новинка</div>
-                <div class="image"><img src="img/catalog-img1.jpg/prod-image2.jpg" height="168" width="218"></div>
+                <div class="image"><img src="img/catalog-img1/prod-image2.jpg" height="168" width="218"></div>
                 <a href="#">Перфоратор BOSCH<br>BFG 3000</a>
                 <div class="item__old-price">22500 P.</div>
                 <div class="item__price">15500 P.</div>
@@ -230,7 +230,7 @@
                   <a class="buy" href="#">КУПИТЬ</a>
                   <a class="bookmark" href="#">В ЗАКЛАДКИ</a>
                 </div>
-                <div class="image"><img src="img/catalog-img1.jpg/prod-image3.jpg" height="168" width="218"></div>
+                <div class="image"><img src="img/catalog-img1/prod-image3.jpg" height="168" width="218"></div>
                 <a href="#">Перфоратор BOSCH<br>BFG 6000</a>
                 <div class="item__old-price">30500 P.</div>
                 <div class="item__price">25500 P.</div>
@@ -240,7 +240,7 @@
                   <a class="buy" href="#">КУПИТЬ</a>
                   <a class="bookmark" href="#">В ЗАКЛАДКИ</a>
                 </div>
-                <div class="image"><img src="img/catalog-img1.jpg/prod-image2.jpg" height="168" width="218"></div>
+                <div class="image"><img src="img/catalog-img1/prod-image2.jpg" height="168" width="218"></div>
                 <a href="#">Перфоратор BOSCH<br>BFG 2000</a>
                 <div class="item__price">12500 P.</div>
               </article>
