--- a/inner.html
+++ b/inner.html
@@ -44,7 +44,7 @@
               </div> 
                   <ul class="header-middle__data">
                     <li>
-                      <a href="#">Мои заказы</a>
+                      <a href="#" class="dot">Мои заказы</a>
                     </li>
                     <li>
                       <a href="#">Личный кабинет</a>
@@ -85,16 +85,16 @@
           <div class="breadcrumbs">
             <ul>
               <li>
-                <a href="#" class="icon"><!--<img src="img/icon-exit.png/icon-home.png" width="15px" height="12px" alt="Главная страница">--></a> 
+                <a href="#" class="icon"></a> 
               </li>
               <li>
                 <a href="#">Каталог</a>
               </li>
               <li>
-                <a href="#">Инструмент</a>
+                <a href="#" class="ref">Инструмент</a>
               </li>
               <li>
-                <span class="">Перфораторы</span>
+                <span>Перфораторы</span>
               </li>
             <ul>
           </div>
@@ -149,8 +149,8 @@
                 </li>
               </ul>
               <div class="catalog-sorting__guides">
-                <a href="#"><img src="down-dir.png" width="11" height="10"></a><!--надо разобраться с треугольниками-->
-                <a href="#"><img src="icon-up-dir.png" width="11" height="10"></a>
+                <a href="#"><!--<img src="down-dir.png" width="11" height="10">--></a>
+                <a href="#"><!--<img src="icon-up-dir.png" width="11" height="10">--></a>
               </div> 
               </div>
               <div class="catalog-list clearfix">
@@ -260,7 +260,6 @@
               Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молтка. В ассортиментном ряду есть выбор "трехрежимников": в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
               </div>
             </div>
-        
       </main>
       <footer class="main-footer">
         <div class="container  clearfix">
