--- a/index.html
+++ b/index.html
@@ -90,12 +90,6 @@
               <div class="foto-block__slider">
                 <div class="slider__paginator">
                   <a class="prev" href="#prev">Назад</a>
-                  <input type="radio" id="btn-1" name="toggle">
-                  <input ype="radio" id="btn-2" name="toggle">
-                  <div class="slider-controls">
-                    <label for="btn-1"></label>
-                    <label for="btn-2"></label>
-                  </div>
                   <a class="next" href="#next">Вперёд</a>
                 </div>
                 <div class="slider__items">
@@ -125,7 +119,7 @@
             <div class="foto-block__buttons">
                 <p>Скидки 50%</p>
                 <a href="#" class="slogan">На 350 товаров</a>
-                <img class="button__icon" src="img/fotopickhe-img/pannier.png.png" height="72" width="59">
+                <img class="button__icon" src="img/fotopickhe-img/pannier.png" height="72" width="59">
             </div>
             <div class="foto-block__buttons">
                 <p>Доставка</p>
