модальное окно и модальная карта

--- a/inner.html
+++ b/inner.html
@@ -149,8 +149,8 @@
                 </li>
               </ul>
               <div class="catalog-sorting__guides">
-                <a href="#"><!--<img src="down-dir.png" width="11" height="10">--></a>
-                <a href="#"><!--<img src="icon-up-dir.png" width="11" height="10">--></a>
+                <a href="#"></a>
+                <a href="#"></a>
               </div> 
               </div>
               <div class="catalog-list clearfix">
@@ -182,6 +182,7 @@
                 <div class="flag flag-new">новинка</div>
                 <div class="image"><img src="img/catalog-img1/prod-image2.jpg" height="168" width="218"></div>
                 <a href="#">Перфоратор BOSCH<br>BFG 2000</a>
+                <div class="item__old-price"></div>
                 <div class="item__price">12500 P.</div>
               </article>
               <article class="catalog-list__item">
@@ -212,6 +213,7 @@
                 </div>
                 <div class="image"><img src="img/catalog-img1/prod-image2.jpg" height="168" width="218"></div>
                 <a href="#">Перфоратор BOSCH<br>BFG 2000</a>
+                <div class="item__old-price"></div>
                 <div class="item__price">12500 P.</div>
               </article>
               <article class="catalog-list__item">
@@ -242,6 +244,7 @@
                 </div>
                 <div class="image"><img src="img/catalog-img1/prod-image2.jpg" height="168" width="218"></div>
                 <a href="#">Перфоратор BOSCH<br>BFG 2000</a>
+                <div class="item__old-price"></div>
                 <div class="item__price">12500 P.</div>
               </article>
               <div class="main-content__paginator">
@@ -265,7 +268,7 @@
         <div class="container  clearfix">
         <div class="contact-information">
           <a href="#" class="contact-information__logo">Техномарт</a>
-          <div class="contact-information__address">г. Санкт-Петербург, ул.Б.<br>Конюшенная, д.19.8</div>
+          <div class="contact-information__address">г. Санкт-Петербург, ул.Б.Конюшенная, д.19.8<br>+7 (812) 555-05-55</div>
         </div>
         <div class="main-footer__menu clearfix">
           <div class="main-footer__menu__top">
