--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     			    	<h2>КОНТАКТЫ</h2>
                 <p>Вы можете забрать товар сами,<br>Заехав в наш офис:</p>
                 <img src="img/map.png" height="158" width="300" ait="Карта">
-                <a href="#">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ!</a>
+                <a id="write_us" href="#">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ!</a>
     			    </div>
     			</div>
     		</section>
@@ -361,5 +361,5 @@
             <button class="big-map-close" type="button" title="Закрыть">Закрыть</button> 
           </div>
         </form>
-      
+      <script type="text/javascript" src="js/script.js"></script>
   </body>   
