убран двойной крестик

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
         </div>
     </footer>
       <div class="modal-content">
-        <div class="modal-content__close"><img src="img/Crossclosing.png" width="16" height="16"></div>
+        <button class="modal-content__close" type="button" title="Закрыть">Закрыть</button>
         <form class="" action="#" method="post">
           <div class="modal-content__top">
             <div class="modal-content__login">
@@ -363,6 +363,6 @@
             <image class="map2" src="img/maps-img/map2.jpg" width="970" height="476">
             <button class="big-map-close" type="button" title="Закрыть">Закрыть</button> 
           </div>
-        </form>
+        
       <script src="js/modal.js"></script>
   </body>   
