исправила опускание формы

--- a/index.html
+++ b/index.html
@@ -343,9 +343,9 @@
               <p>Ваше имя:</p>
               <input type="text" name="login-name" placeholder="Представтесь пожалуйста" required>
             </div>
-            <div class="modal-content__password">
+            <div class="modal-content__email">
               <p>Ваш e-mail:</p>
-              <input type="password" name="password" placeholder="Для отправки ответа" required>
+              <input type="email" name="email" placeholder="Для отправки ответа" required>
             </div>
            
             <div class="modal-content__letter">
