--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     <div class="main__right-block">
                         <h2>КОНТАКТЫ</h2>
                         <p>Вы можете забрать товар сами,<br>Заехав в наш офис:</p>
-                        <img src="img/map.png" height="158" width="300" ait="Карта">
+                        <img clas="js-open-map" src="img/map.png" height="158" width="300" ait="Карта">
                         <a class="write_us" href="#">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ!</a>
                     </div>
                 </div>
@@ -358,11 +358,14 @@
           </div>
         </form>
       </div>
-          <div class="big-map">
+          <div class="modal-big-map">
             <image class="map1" src="img/maps-img/map1.jpg" width="970" height="476"> 
-            <image class="map2" src="img/maps-img/map2.jpg" width="970" height="476">
+            <!--<image class="map2" src="img/maps-img/map2.jpg" width="970" height="476">-->
             <button class="big-map-close" type="button" title="Закрыть">Закрыть</button> 
           </div>
-        
+        <div clas="modal-bigest-map">
+          <image class="map2" src="img/maps-img/map2.jpg" width="970" height="476">
+          <button class="bigest-map-close" type="button" title="Закрыть">Закрыть</button> 
+        </div>
       <script src="js/modal.js"></script>
   </body>   
