--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     <div class="main__right-block">
                         <h2>КОНТАКТЫ</h2>
                         <p>Вы можете забрать товар сами,<br>Заехав в наш офис:</p>
-                        <img clas="js-open-map" src="img/map.png" height="158" width="300" ait="Карта">
+                        <img class="js-open-map" src="img/map.png" height="158" width="300" ait="Карта">
                         <a class="write_us" href="#">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ!</a>
                     </div>
                 </div>
