--- a/index.html
+++ b/index.html
@@ -358,14 +358,14 @@
           </div>
         </form>
       </div>
-          <div class="modal-big-map">
-            <image class="map1" src="img/maps-img/map1.jpg" width="970" height="476"> 
-            <!--<image class="map2" src="img/maps-img/map2.jpg" width="970" height="476">-->
-            <button class="big-map-close" type="button" title="Закрыть">Закрыть</button> 
+      <div class="modal-big-map">
+          <div class="map1">
+            <image src="img/maps-img/map1.jpg" width="970" height="476"> 
           </div>
-        <div clas="modal-bigest-map">
-          <image class="map2" src="img/maps-img/map2.jpg" width="970" height="476">
-          <button class="bigest-map-close" type="button" title="Закрыть">Закрыть</button> 
-        </div>
+          <div class="map2">
+            <image src="img/maps-img/map2.jpg" width="970" height="476">
+          </div>
+          <button class="big-map-close" type="button" title="Закрыть">Закрыть</button> 
+      </div>
       <script src="js/modal.js"></script>
   </body>   
